kubernetes/apps/flux-system/flux-instance/app/webhook/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-receiver
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames: ["flux-webhook.hemma.dev"]
  parentRefs:
    - name: external
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
